Fix: Power-Up Item createRadialGradient Fehler behoben

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <title>Luca's Snake Adventure</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mobile.css">
+  <link rel="stylesheet" href="css/animations.css">
 </head>
 <body>
   <!-- Game Container -->
@@ -184,6 +185,7 @@
   <script src="js/effects.js"></script>
   <script src="js/background.js"></script>
   <script src="js/controls.js"></script>
+  <script src="js/animations.js"></script>
   <script src="js/ui.js"></script>
   <script src="js/game.js"></script>
   <script src="js/main.js"></script>
